[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "remi-belle-scout-radar"
version = "0.1.0"
description = "Human-in-the-loop public-profile research pipeline for Remi Belle"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "google-api-python-client>=2.120,<3",
  "google-auth>=2.28,<3",
  "httpx>=0.27,<1",
  "pydantic>=2.6,<3",
  "pydantic-settings>=2.2,<3",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "ruff>=0.5,<1"]

[project.scripts]
remibelle-radar = "remibelle_radar.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

